--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -140,6 +140,7 @@ body {
     max-width: 992px;
     align-items: center;
     justify-content: center;
+    margin: auto;
     .step-separator {
       flex: 1;
       border-top: 2px solid #ddd;
